dataset1235/2025-2/1955397009/users/3283679446/executions/3933884819_1076448396.log
== RUN (2025-08-26 21:39:20)
-- CODE: 
var_a = float(input("Insira um número real: "))
var_b = float(input("Insira um número real: "))
var_c = float(input("Insira um número real: "))

num = a**2 + b**2 + c**2

den = a + b + c

frac = num/den

frac_arredondado = round(frac, 7)

print(frac_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = a**2 + b**2 + c**2
          ^
NameError: name 'a' is not defined
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = a**2 + b**2 + c**2
          ^
NameError: name 'a' is not defined
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = a**2 + b**2 + c**2
          ^
NameError: name 'a' is not defined
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = a**2 + b**2 + c**2
          ^
NameError: name 'a' is not defined
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = a**2 + b**2 + c**2
          ^
NameError: name 'a' is not defined
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = a**2 + b**2 + c**2
          ^
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:38:18)
-- CODE: 
a = float(input("Insira um número real: "))
b = float(input("Insira um número real: "))
c = float(input("Insira um número real: "))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real:
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
---- user output:
Insira um número real: Insira um número real: Insira um número real:
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
---- user output:
Insira um número real: Insira um número real: Insira um número real:
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
---- user output:
Insira um número real: Insira um número real: Insira um número real:
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real:
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
---- user output:
Insira um número real: Insira um número real: Insira um número real:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:36:39)
-- CODE: 
a = float(input("Insira um número real: "))
b = float(input("Insira um número real: "))
c = float(input("Insira um número real: "))

num = a ** 2 + b ** 2 + c ** 2

den = a + b + c

frac = num/den

frac_arredondado = round(frac, 7)

print(frac_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 2.3333333
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
---- user output:
Insira um número real: Insira um número real: Insira um número real: 25.6666667
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
---- user output:
Insira um número real: Insira um número real: Insira um número real: 342.8680203
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
---- user output:
Insira um número real: Insira um número real: Insira um número real: 106.1509434
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 83.3333333
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
---- user output:
Insira um número real: Insira um número real: Insira um número real: -3.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:38:54)
-- CODE: 
a = float(input("Insira um número real: "))
b = float(input("Insira um número real: "))
c = float(input("Insira um número real: "))

num = a**2 + b**2 + c**2

den = a + b + c

frac = num/den

frac_arredondado = round(frac, 7)

print(frac_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 2.3333333
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
---- user output:
Insira um número real: Insira um número real: Insira um número real: 25.6666667
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
---- user output:
Insira um número real: Insira um número real: Insira um número real: 342.8680203
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
---- user output:
Insira um número real: Insira um número real: Insira um número real: 106.1509434
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 83.3333333
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
---- user output:
Insira um número real: Insira um número real: Insira um número real: -3.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:38:10)
-- CODE: 
a = float(input("Insira um número real: "))
b = float(input("Insira um número real: "))
c = float(input("Insira um número real: "))

num = a**2 + b**2 + c**2

den = a + b + c

frac = num/den

frac_arredondado = round(frac, 7)

print(frac_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 2.3333333
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
---- user output:
Insira um número real: Insira um número real: Insira um número real: 25.6666667
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
---- user output:
Insira um número real: Insira um número real: Insira um número real: 342.8680203
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
---- user output:
Insira um número real: Insira um número real: Insira um número real: 106.1509434
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 83.3333333
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
---- user output:
Insira um número real: Insira um número real: Insira um número real: -3.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:37:03)
-- CODE: 
a = float(input("Insira um número real: "))
b = float(input("Insira um número real: "))
c = float(input("Insira um número real: "))

num = a**2 + b**2 + c**2

den = a + b + c

frac = num/den

frac_arredondado = round(frac, 7)

print(frac_arredondado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 2.3333333
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
---- user output:
Insira um número real: Insira um número real: Insira um número real: 25.6666667
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
---- user output:
Insira um número real: Insira um número real: Insira um número real: 342.8680203
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
---- user output:
Insira um número real: Insira um número real: Insira um número real: 106.1509434
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
---- user output:
Insira um número real: Insira um número real: Insira um número real: 83.3333333
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
---- user output:
Insira um número real: Insira um número real: Insira um número real: -3.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
